--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="text/javascript"
+      src="./js/Hendlers/jquery-3.5.1.min.js"
+    ></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>The Finel Projact</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="text/javascript" src="./js/Hendlers/jquery-3.5.1.min.js"></script>
-  <link rel="stylesheet" href="./css/style.css" />
-  <title>The Finel Projact</title>
-</head>
+  <body>
+    <div id="main"></div>
 
-<body>
+    
 
-  <div id="main"></div>
-
-
-
-
-  <script type="module" src="./js/app.js"></script>
-</body>
-
+    <script type="module" src="./js/app.js"></script>
+  </body>
 </html>
