--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="main"></div>
 
-    
+    <!-- USERnMAE: yehuda.n Password: 1234 -->
 
     <script type="module" src="./js/app.js"></script>
   </body>
